# python-telegram-bot-django-persistence

./: .all-contributorsrc  LICENSE  README.md  pyproject.toml  techstack.md  techstack.yml
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml
aiogram_djpersistence/: admin.py  apps.py  models.py  storage.py
aiogram_djpersistence/migrations/: 0001_initial.py
project/: settings.py
python_telegram_bot_django_persistence/: admin.py  apps.py  models.py  persistence.py
python_telegram_bot_django_persistence/migrations/: 0001_initial.py  0002_alter_conversationdata_state.py  0003_alter_userdata_user_id.py
