[project]
requires-python = ">=3.10"

[tool.poetry]
name = "python-telegram-bot-django-persistence"
version = "0.2.0"
description = "Package to use Django ORM as persistence engine in Python Telegram Bot"
authors = ["Alexander Shishenko <alex@shishenko.com>"]
license = "MIT"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Internet',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
]
readme = "README.md"
homepage = "https://github.com/GamePad64/python-telegram-bot-django-persistence"
packages = [
    { include = "python_telegram_bot_django_persistence" },
    { include = "aiogram_djpersistence" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.0"
django-stubs = "^5.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
pydantic = "^2.8.2"

[tool.poetry.group.ptb.dependencies]
python-telegram-bot = ">=20"

[tool.poetry.group.aiogram.dependencies]
aiogram = "^3.11.0"
asgiref = "^3.8.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "DJ", "PTH"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = true
allow_redefinition = true

[tool.django-stubs]
django_settings_module = "project.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
